--- a/visual2.html
+++ b/visual2.html
@@ -42,7 +42,7 @@
                 <li><a href="#">Separated link</a></li>
                 </ul>
             </li>       
-          <li><a href="camparision.html">Comparision</a></li>
+          <li><a href="comparision.html">Comparision</a></li>
           <li><a href="data.html">Data</a></li>
         </ul>
       </div>
