--- a/comparision.html
+++ b/comparision.html
@@ -80,7 +80,7 @@ height: 50%;
                          <div class=" col-sm-6 col-md-3 ">
                              <h3>vs Max Temperature</h3>
                                  
-                                   <a href="Visual1.html">
+                                   <a href="visual1.html">
                                                                  
                                    <img width=200% src="Fig1.png" alt="..." style="width:150px;height:150px;">
                                    </a>
@@ -89,7 +89,7 @@ height: 50%;
                     <div class="col-md-6">
                             <div class=" col-sm-6 col-md-3">
                                 <h3>vs Humidity</h3>
-                                  <a href="Visual2.html">
+                                  <a href="visual2.html">
                                    <img  src="Fig2.png" alt="..." style="width:150px;height:150px;">
                                  </a>
                             </div>
@@ -99,7 +99,7 @@ height: 50%;
                     <div class="col-md-6">
                             <div class="col-sm-6 col-md-3 ">
                                 <h3>vs Cloudiness</h3>
-                                   <a href="Visual3.html">
+                                   <a href="visual3.html">
                                    <img  src="Fig3.png" alt="..." style="width:150px;height:150px;">
                                  </a>
                             </div>
@@ -107,7 +107,7 @@ height: 50%;
                         <div class="col-md-6">
                             <div class="col-sm-6 col-md-3">
                                 <h3>vs WindSpeed</h3>
-                                <a href="Visual4.html">
+                                <a href="visual4.html">
                                 <img width = 200 src="Fig4.png" alt="..." style="width:150px;height:150px;">
                                </a>
                             </div>
